--- a/index.html
+++ b/index.html
@@ -36,3 +36,20 @@
     </thead>
     <tbody>
       <tr>
+        <td>Math</td>
+        <td>Helps almost every career and Helps understand the world better</td>
+        <td>Math problem causes pain centers to light up in number-phobic brains.</td>
+      </tr>
+      <tr>
+        <td>Computer Class</td>
+        <td>Fast access to research and information</td>
+        <td>their physical health could suffer</td>
+      </tr>
+    </tbody>
+    <tfoot>
+    <table>
+<br /> <br /> My frist html quiz <br /> <br />
+    Jude N.
+
+</body>
+</html>
